[gd_scene load_steps=12 format=2]

[ext_resource path="res://Nodes/Objects/Chest/WoodenChest.png" type="Texture2D" id=1]
[ext_resource path="res://Nodes/Map/ZIndexer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Nodes/Objects/Chest/WoodParticles.png" type="Texture2D" id=3]
[ext_resource path="res://Nodes/Objects/Chest/CrateShadow.png" type="Texture2D" id=4]
[ext_resource path="res://Scripts/GenericInteractable.gd" type="Script" id=5]

[sub_resource type="GDScript" id=1]
script/source = "extends \"res://Nodes/Objects/Chest/Chest.gd\"

var destroyed: bool

func _ready() -> void:
	Utils.set_collisions($Detector, Const.ENEMY_COLLISION_LAYER, Utils.PASSIVE)
	set_meta(\"object_type\", \"Rusty Chest\")

func on_enter(area: Area2D) -> void:
	if area.is_in_group(\"player_projectile\"):
		destroy(area)

func open():
	destroy()

func destroy(area = null):
	if destroyed:
		return
	
	destroyed = true
	Utils.play_sample(Utils.random_sound(\"res://SFX/Objects/impactwood\"), self, false, 1.1)
	if area:
		Utils.on_hit(area)
	spawn_items()
	queue_free()
	
	var p = $GPUParticles2D
	var t = p.global_transform
	remove_child(p)
	Utils.game.map.add_child(p)
	p.global_transform = t
	p.emitting = true
	get_tree().create_timer(p.lifetime * 2).connect(\"timeout\", Callable(p, \"queue_free\"))
"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 6 )

[sub_resource type="Gradient" id=6]
offsets = PackedFloat32Array( 0.684906, 1 )
colors = PackedColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticleProcessMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 1, 7, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
angle = 720.0
angle_random = 1.0
scale = 0.14
color_ramp = SubResource( 7 )

[sub_resource type="CircleShape2D" id=8]
radius = 16.0

[node name="RustyChest" type="PixelMapRigidBody"]
z_index = 150
z_as_relative = false
linear_damp = 10.0
angular_damp = 10.0
radius = 4
pixel_map_bounce = 0.0
script = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource( 2 )

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 1 )

[node name="Shadow" type="Sprite2D" parent="Sprite2D"]
show_behind_parent = true
scale = Vector2( 6.5, 9 )
texture = ExtResource( 4 )

[node name="ZIndexer" parent="." instance=ExtResource( 2 )]
z_index = 150

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 3.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="GenericInteractable" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GenericInteractable"]
visible = false
shape = SubResource( 8 )

[connection signal="area_entered" from="Detector" to="." method="on_enter"]
[connection signal="interacted" from="GenericInteractable" to="." method="on_interact"]
